# Serious-Engine

./: .gitignore  README.md
Sources/: All.sln  CMakeLists.txt  build-linux32.sh  build-linux64.sh  deploy-linux.sh
Sources/DecodeReport/: DecodeReport.cpp  DecodeReport.vcxproj
Sources/DedicatedServer/: CMakeLists.txt  DedicatedServer.cpp  DedicatedServer.vcxproj  StdAfx.cpp  StdAfx.h
Sources/Depend/: Depend.vcxproj  Dependency.cpp  Dependency.h  StdH.h  UtilityDepend.cpp
Sources/Ecc/: CMakeLists.txt  Ecc.vcxproj  Ecc.vcxproj.filters  Main.cpp  Main.h  Parser.y  bison.simple
Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  SE_Config.h  StdH.h
Sources/Engine/API/: API.cpp  EngineGUI.h
Sources/Engine/Base/: Anim.cpp  Anim.h  Assert.h  Base.h  ByteSwap.h  CRC.h  CRCTable.cpp  CTString.cpp  CTString.h  CTString.inl  Config.h  Console.cpp  Console.h  Directory.cpp  DynamicModules.cpp  DynamicModules.h  ErrorReporting.cpp  ErrorReporting.h  ErrorTable.h  FileName.cpp  FileName.h  GameDir.cpp  GameDir.h  IFeel.cpp  IFeel.h  Input.cpp  Input.h  Input2ndMouse.cpp  InputJoystick.cpp  Lists.cpp  Lists.h  Memory.cpp  Memory.h  Parser.y  ParsingSymbols.h  Priority.inl  Profiling.cpp  Profiling.h  Registry.cpp  Registry.h  (+21 more)
Sources/Engine/Brushes/: Brush.h  BrushArchive.cpp  BrushIO.cpp  BrushMip.cpp  BrushPolygon.cpp  BrushSector.cpp  BrushTriangularize.cpp
Sources/Engine/Classes/: MovableEntity.es  PlayerEntity.es
Sources/Engine/Entities/: Entity.cpp  Entity.h  EntityClass.cpp  EntityClass.h  EntityCopying.cpp  EntityProperties.cpp  EntityProperties.h  FieldBSPTesting.cpp  PlayerCharacter.cpp
Sources/Engine/GameAgent/: GameAgent.cpp  GameAgent.h
Sources/Engine/Graphics/: Adapter.cpp  Adapter.h  Benchmark.cpp  Color.cpp  Color.h  DepthCheck.cpp  DisplayMode.cpp  DisplayMode.h  DrawPort.cpp  DrawPort_Particles.cpp  DrawPort_RenderScene.cpp  Fog.cpp  Font.cpp  Font.h  GfxInterface.h  GfxLibrary.cpp  GfxLibrary.h  Gfx_Direct3D.cpp  Gfx_Direct3D_Colors.cpp  Gfx_Direct3D_Textures.cpp  Gfx_OpenGL.cpp  Gfx_OpenGL_Textures.cpp  Gfx_wrapper.cpp  Gfx_wrapper.h  Gfx_wrapper_Direct3D.cpp  Gfx_wrapper_Direct3D.h  Gfx_wrapper_Null.h  Gfx_wrapper_OpenGL.cpp  Gfx_wrapper_OpenGL.h  Graphics.cpp  ImageInfo.cpp  (+16 more)
Sources/EngineGui/: DlgCreateAnimatedTexture.cpp  DlgCreateEffectTexture.cpp  DlgCreateNormalTexture.cpp  DlgSelectMode.cpp  EngineGUI.cpp  EngineGUI.h  EngineGUI.vcxproj  FileRequester.cpp  StdH.h  WndDisplayTexture.cpp
Sources/EntitiesMP/: AirElemental.es  AmmoItem.es  AmmoPack.es  AnimationChanger.es  AnimationHub.es  Beast.es  Boneman.es  CMakeLists.txt  Camera.es  CameraMarker.es  CannonBall.es  CannonRotating.es  CannonStatic.es  ChainsawFreak.es  Copier.es  CrateBus.es  CreditsHolder.es  Debris.es  Demon.es  DestroyableArchitecture.es  Devil.es  DevilMarker.es  DoorController.es  Elemental.es  EnemyBase.es  EnemySpawner.es  EntitiesMP.vcxproj  EnvironmentBase.es  EnvironmentMarker.es  ExotechLarva.es  Eyeman.es  Fish.es  Flame.es  Gizmo.es  GravityRouter.es  Grunt.es  GruntSka.es  Guffy.es  Headman.es  HudPicHolder.es  (+36 more)
Sources/GameGUIMP/: ConsoleSymbolsCombo.cpp  DlgConsole.cpp  DlgEditButtonAction.cpp  DlgPlayerControls.cpp  DlgPlayerControls.h  DlgPlayerSettings.cpp  DlgSelectPlayer.cpp  EditConsole.cpp  GameGUI.cpp  GameGUI.h  GameGUIMP.vcxproj  StdAfx.h
Sources/GameMP/: CMakeLists.txt  Camera.cpp  CompMessage.cpp  CompModels.cpp  Computer.cpp  Console.cpp  Controls.cpp  Game.cpp  Game.h  GameMP.vcxproj  GameMP.vcxproj.filters  Interface.cpp  LCDDrawing.cpp  LoadingHook.cpp  Map.cpp  SessionProperties.cpp  StdAfx.h  WEDInterface.cpp
Sources/MakeFONT/: MakeFONT.cpp  MakeFONT.vcxproj
Sources/Modeler/: ChoosedColorButton.cpp  ColoredButton.cpp  DlgCreateReflectionTexture.cpp  DlgCreateSpecularTexture.cpp  DlgExportForSkinning.cpp  DlgInfoFrame.cpp  DlgInfoPgRendering.cpp  DlgMarkLinkedSurfaces.cpp  DlgPgCollision.cpp  DlgPgInfoAttachingPlacement.cpp  DlgPreferences.cpp  MainFrm.cpp  Modeler.cpp  Modeler.vcxproj  ModelerDoc.cpp  ModelerView.cpp  SkyFloat.cpp  StdAfx.h
Sources/Properties/: Common.props  Debug.props  DynamicDebug.props  DynamicRelease.props  Release.props  StaticDebug.props  StaticRelease.props
Sources/RCon/: RCon.cpp  RCon.vcxproj  RConDlg.cpp  StdAfx.h
Sources/SeriousSam/: CMakeLists.txt  CmdLine.cpp  Credits.cpp  GLSettings.cpp  LevelInfo.cpp  MainWindow.cpp  MainWindow.h  ScreenResolutions.cpp  ScreenResolutions.h  SeriousSam.cpp  SeriousSam.h  SeriousSam.vcxproj  SeriousSam.vcxproj.filters  SplashScreen.cpp  StdH.h  VarList.cpp  WindowModes.cpp
Sources/SeriousSkaStudio/: ColoredButton.cpp  DlgBarTreeView.cpp  DlgBarTreeView.h  DlgClient.cpp  DlgClient.h  MDIClientWnd.cpp  MDIClientWnd.h  Parser.y  ParsingSymbols.h  Scanner.l  SeriousSkaStudio.cpp  SeriousSkaStudio.h  SeriousSkaStudio.vcxproj  SeriousSkaStudioDoc.cpp  SeriousSkaStudioView.cpp  SplitterFrame.cpp  StdAfx.h  TextBox.cpp
Sources/Shaders/: CMakeLists.txt  Common.cpp  Shaders.vcxproj  Shaders.vcxproj.filters  StdH.h
Sources/StaticAPI/: EntitiesMP.inl  Readme.txt  Shaders.inl
Sources/WorldEditor/: BrowseWindow.cpp  Browser.cpp  CSGDesitnationCombo.cpp  ChildFrm.cpp  ChildFrm.h  ColoredButton.cpp  CtrlEditFlags.cpp  CustomComboWnd.cpp  DlgBrowseByClass.cpp  DlgGenerateFBM.cpp  DlgLightAnimationEditor.cpp  DlgLinkTree.cpp  DlgPgGlobal.cpp  DlgPgPrimitive.cpp  DlgPgShadow.cpp  DlgPreferences.cpp  DlgRenderingPreferences.cpp  DlgSelectByName.cpp  DlgTipOfTheDay.cpp  EditMipSwitchDistance.cpp  MainFrm.cpp  PrimitiveHistoryCombo.cpp  PropertyComboBar.cpp  PropertyComboBox.cpp  SkyFloat.cpp  StdAfx.h  TerrainEditing.cpp  TerrainEditing.h  TerrainInterface.cpp  VirtualTreeCtrl.cpp  VirtualTreeNode.cpp  VirtualTreeNode.h  WndDisplayTexture.cpp  WndTerrainTilePalette.cpp  WorldEditor.cpp  WorldEditor.h  WorldEditor.vcxproj  WorldEditorDoc.cpp  WorldEditorView.cpp
Sources/cmake/: ParserAndScanner.cmake  SE1Setup.cmake
Sources/libogg/: libogg_dynamic.vcxproj
Sources/libvorbis/: libvorbis_dynamic.vcxproj  libvorbisfile_dynamic.vcxproj
(+185 files in other folders)
