cmake_minimum_required(VERSION 3.7.2)
project(EntitiesMP)

set(ENTITIES_CPP "")
set(ENTITIES_H "")
entity(ENTITIES "EntitiesMP/AirElemental")
entity(ENTITIES "EntitiesMP/AirShockwave")
entity(ENTITIES "EntitiesMP/AmmoItem")
entity(ENTITIES "EntitiesMP/AmmoPack")
entity(ENTITIES "EntitiesMP/AnimationChanger")
entity(ENTITIES "EntitiesMP/AnimationHub")
entity(ENTITIES "EntitiesMP/AreaMarker")
entity(ENTITIES "EntitiesMP/ArmorItem")
entity(ENTITIES "EntitiesMP/BackgroundViewer")
entity(ENTITIES "EntitiesMP/BasicEffects")
entity(ENTITIES "EntitiesMP/Beast")
entity(ENTITIES "EntitiesMP/BigHead")
entity(ENTITIES "EntitiesMP/BlendController")
entity(ENTITIES "EntitiesMP/BloodSpray")
entity(ENTITIES "EntitiesMP/Boneman")
entity(ENTITIES "EntitiesMP/Bouncer")
entity(ENTITIES "EntitiesMP/Bullet")
entity(ENTITIES "EntitiesMP/Camera")
entity(ENTITIES "EntitiesMP/CameraMarker")
entity(ENTITIES "EntitiesMP/CannonBall")
entity(ENTITIES "EntitiesMP/CannonRotating")
entity(ENTITIES "EntitiesMP/CannonStatic")
entity(ENTITIES "EntitiesMP/ChainsawFreak")
entity(ENTITIES "EntitiesMP/Copier")
entity(ENTITIES "EntitiesMP/Counter")
entity(ENTITIES "EntitiesMP/CrateBus")
entity(ENTITIES "EntitiesMP/CrateRider")
entity(ENTITIES "EntitiesMP/CreditsHolder")
entity(ENTITIES "EntitiesMP/Damager")
entity(ENTITIES "EntitiesMP/Debris")
entity(ENTITIES "EntitiesMP/DebugEntityStatesDisplay")
entity(ENTITIES "EntitiesMP/Demon")
entity(ENTITIES "EntitiesMP/DestroyableArchitecture")
entity(ENTITIES "EntitiesMP/Devil")
entity(ENTITIES "EntitiesMP/DevilMarker")
entity(ENTITIES "EntitiesMP/DevilProjectile")
entity(ENTITIES "EntitiesMP/DoorController")
entity(ENTITIES "EntitiesMP/EffectMarker")
entity(ENTITIES "EntitiesMP/Effector")
entity(ENTITIES "EntitiesMP/Elemental")
entity(ENTITIES "EntitiesMP/EnemyBase")
entity(ENTITIES "EntitiesMP/EnemyCounter")
entity(ENTITIES "EntitiesMP/EnemyDive")
entity(ENTITIES "EntitiesMP/EnemyFly")
entity(ENTITIES "EntitiesMP/EnemyMarker")
entity(ENTITIES "EntitiesMP/EnemyRunInto")
entity(ENTITIES "EntitiesMP/EnemySpawner")
entity(ENTITIES "EntitiesMP/EnvironmentBase")
entity(ENTITIES "EntitiesMP/EnvironmentMarker")
entity(ENTITIES "EntitiesMP/EnvironmentParticlesHolder")
entity(ENTITIES "EntitiesMP/Eruptor")
entity(ENTITIES "EntitiesMP/ExotechLarva")
entity(ENTITIES "EntitiesMP/ExotechLarvaBattery")
entity(ENTITIES "EntitiesMP/ExotechLarvaCharger")
entity(ENTITIES "EntitiesMP/Eyeman")
entity(ENTITIES "EntitiesMP/Fireworks")
entity(ENTITIES "EntitiesMP/Fish")
entity(ENTITIES "EntitiesMP/Flame")
entity(ENTITIES "EntitiesMP/FogMarker")
entity(ENTITIES "EntitiesMP/Gizmo")
entity(ENTITIES "EntitiesMP/Global")
entity(ENTITIES "EntitiesMP/GradientMarker")
entity(ENTITIES "EntitiesMP/GravityMarker")
entity(ENTITIES "EntitiesMP/GravityRouter")
entity(ENTITIES "EntitiesMP/Grunt")
entity(ENTITIES "EntitiesMP/GruntSka")
entity(ENTITIES "EntitiesMP/Guffy")
entity(ENTITIES "EntitiesMP/HazeMarker")
entity(ENTITIES "EntitiesMP/Headman")
entity(ENTITIES "EntitiesMP/HealthItem")
entity(ENTITIES "EntitiesMP/HudPicHolder")
entity(ENTITIES "EntitiesMP/Item")
entity(ENTITIES "EntitiesMP/KeyItem")
entity(ENTITIES "EntitiesMP/LarvaOffspring")
entity(ENTITIES "EntitiesMP/Light")
entity(ENTITIES "EntitiesMP/Lightning")
entity(ENTITIES "EntitiesMP/Marker")
entity(ENTITIES "EntitiesMP/MessageHolder")
entity(ENTITIES "EntitiesMP/MessageItem")
entity(ENTITIES "EntitiesMP/MeteorShower")
entity(ENTITIES "EntitiesMP/MirrorMarker")
entity(ENTITIES "EntitiesMP/ModelDestruction")
entity(ENTITIES "EntitiesMP/ModelHolder")
entity(ENTITIES "EntitiesMP/ModelHolder2")
entity(ENTITIES "EntitiesMP/ModelHolder3")
entity(ENTITIES "EntitiesMP/MovingBrush")
entity(ENTITIES "EntitiesMP/MovingBrushMarker")
entity(ENTITIES "EntitiesMP/MusicChanger")
entity(ENTITIES "EntitiesMP/MusicHolder")
entity(ENTITIES "EntitiesMP/NavigationMarker")
entity(ENTITIES "EntitiesMP/ParticlesHolder")
entity(ENTITIES "EntitiesMP/Pendulum")
entity(ENTITIES "EntitiesMP/PhotoAlbum")
entity(ENTITIES "EntitiesMP/Pipebomb")
entity(ENTITIES "EntitiesMP/Player")
entity(ENTITIES "EntitiesMP/PlayerActionMarker")
entity(ENTITIES "EntitiesMP/PlayerAnimator")
entity(ENTITIES "EntitiesMP/PlayerMarker")
entity(ENTITIES "EntitiesMP/PlayerView")
entity(ENTITIES "EntitiesMP/PlayerWeapons")
entity(ENTITIES "EntitiesMP/PlayerWeaponsEffects")
entity(ENTITIES "EntitiesMP/PowerUpItem")
entity(ENTITIES "EntitiesMP/Projectile")
entity(ENTITIES "EntitiesMP/PyramidSpaceShip")
entity(ENTITIES "EntitiesMP/PyramidSpaceShipMarker")
entity(ENTITIES "EntitiesMP/Reminder")
entity(ENTITIES "EntitiesMP/RollingStone")
entity(ENTITIES "EntitiesMP/Santa")
entity(ENTITIES "EntitiesMP/Scorpman")
entity(ENTITIES "EntitiesMP/ScrollHolder")
entity(ENTITIES "EntitiesMP/SeriousBomb")
entity(ENTITIES "EntitiesMP/Ship")
entity(ENTITIES "EntitiesMP/ShipMarker")
entity(ENTITIES "EntitiesMP/Shooter")
entity(ENTITIES "EntitiesMP/SoundHolder")
entity(ENTITIES "EntitiesMP/SpawnerProjectile")
entity(ENTITIES "EntitiesMP/Spinner")
entity(ENTITIES "EntitiesMP/StormController")
entity(ENTITIES "EntitiesMP/Summoner")
entity(ENTITIES "EntitiesMP/SummonerMarker")
entity(ENTITIES "EntitiesMP/Switch")
entity(ENTITIES "EntitiesMP/TacticsChanger")
entity(ENTITIES "EntitiesMP/TacticsHolder")
entity(ENTITIES "EntitiesMP/Teleport")
entity(ENTITIES "EntitiesMP/Terrain")
entity(ENTITIES "EntitiesMP/TextFXHolder")
entity(ENTITIES "EntitiesMP/TimeController")
entity(ENTITIES "EntitiesMP/TouchField")
entity(ENTITIES "EntitiesMP/Trigger")
entity(ENTITIES "EntitiesMP/Twister")
entity(ENTITIES "EntitiesMP/VoiceHolder")
entity(ENTITIES "EntitiesMP/Walker")
entity(ENTITIES "EntitiesMP/WatchPlayers")
entity(ENTITIES "EntitiesMP/Watcher")
entity(ENTITIES "EntitiesMP/Water")
entity(ENTITIES "EntitiesMP/WeaponItem")
entity(ENTITIES "EntitiesMP/Werebull")
entity(ENTITIES "EntitiesMP/Woman")
entity(ENTITIES "EntitiesMP/WorldBase")
entity(ENTITIES "EntitiesMP/WorldLink")
entity(ENTITIES "EntitiesMP/WorldSettingsController")
add_custom_target(ParseEntities DEPENDS ${ENTITIES_H})

set(ENTITIESLIB_SRCS
  ${ENTITIES_CPP}
  "Common/Common.cpp"
  "Common/EmanatingParticles.cpp"
  "Common/HUD.cpp"
  "Common/Particles.cpp"
  "Common/PathFinding.cpp"
  "StdH/StdH.cpp"
)

add_library(${ENTITIESLIB} STATIC ${ENTITIESLIB_SRCS})
add_dependencies(${ENTITIESLIB} ParseEntities Engine)

# For EntitiesMP/StdH/StdH.h access
target_include_directories(${ENTITIESLIB} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/StdH")

target_link_libraries(${ENTITIESLIB} Engine)
set_target_properties(${ENTITIESLIB} PROPERTIES ENABLE_EXPORTS ON)
